--- a/raon-control/monitoring.html
+++ b/raon-control/monitoring.html
@@ -85,7 +85,21 @@
                         </div>
                     </div>
 
-                    <!-- 1 / 4 -->
+                    <!-- 1 / 3 -->
+                    <div class="grid-item grid-1x1">
+                        <p class="title">IOC</p>
+                        <div class="doughnutChartText">1200</div>
+                        <div class="doughnutChartTextUnder">2000</div>
+                        <div class="doughnut-contain">
+                            <svg width="174" height="174" style="fill:none">
+                                <circle class="doughnutBackground" cx="80" cy="80" r="80" />
+                                <circle class="doughnutForeground" cx="80" cy="80" r="80"
+                                    style="--chartValue:100; --doughuntColor:#D4145A" />
+                            </svg>
+                        </div>
+                    </div>
+
+                    <!-- 1 / 3
                     <div class="grid-item grid-1x1">
                         <p class="title">Pressure
                             <span class="tooltiptext">SYS-SUBSYS:DEV-SUBDEV:Signal</span>
@@ -93,9 +107,9 @@
                         <p class="data" id="scwook-ai3">
                             <span id="pressure-value1">1.9</span><sup id="pressure-exp1" class="exp-value">-7</sup>
                         </p>
-                    </div>
+                    </div> -->
 
-                    <!-- 1 / 5 -->
+                    <!-- 1 / 4 -->
                     <div class="grid-item grid-1x1">
                         <p class="title">FPS</p>
                         <div id="fps-container">
@@ -508,7 +522,7 @@
 
         // FPS Node
         var fpsNodeClass = document.getElementsByClassName('fps-node');
-        var colorArray = ['#004060','#00A651','#ED1A3B'];
+        var colorArray = ['#004060', '#00A651', '#ED1A3B'];
         setTimeout(function () {
 
             setInterval(function () {
