monitoring server part

--- a/raon-control/monitoring.html
+++ b/raon-control/monitoring.html
@@ -200,7 +200,25 @@
                     </div>
 
                     <!-- 2 / 4 -->
-                    <div class="grid-item grid-1x1"></div>
+                    <div class="grid-item grid-1x1">
+                        <div class="server-state-container"
+                            style="display: flex; width:170px; height:170px; background-color: aqua;">
+                            <div class="cpu-status">
+                                <div class="server-value">60%</div>
+                                <div class="level-bar"></div>
+                                <div class="level-bar"></div>
+                                <div class="level-bar"></div>
+                                <div class="level-bar"></div>
+                                <div class="level-bar"></div>
+                                <div class="level-bar"></div>
+                                <div class="level-bar"></div>
+                                <div class="level-bar"></div>
+                                <div class="level-bar"></div>
+                                <div class="level-bar"></div>
+                                <div class="server-title">CPU</div>
+                            </div>
+                        </div>
+                    </div>
 
                     <!-- 2 / 5 -->
                     <div class="grid-item grid-1x1"></div>
@@ -217,7 +235,14 @@
                     </div> -->
 
                     <!-- 3 / 1 -->
-                    <div class="grid-item grid-1x1"></div>
+                    <div class="grid-item grid-1x1">
+                        <p class="title">Network
+                            <span class="tooltiptext">SYS-SUBSYS:DEV-SUBDEV:Signal</span>
+                        </p>
+                        <div class="data">6.19 Gb/s</div>
+                        <div class="sub-data">12.10 Gb/s</div>
+                        <div class="sub-title">SCL</div>
+                    </div>
 
                     <!-- 3 / 2 - 3 -->
                     <div class="grid-item grid-2x1" style="grid-column: 2/span 2;">
