monitoring chart simulation and add bab menu

--- a/raon-control/members.html
+++ b/raon-control/members.html
@@ -26,11 +26,12 @@
     <div id="raon-box"><a href="main.html"><img src="images/raon-white.svg"></img></a></div>
     <div id="accelerator-control"><a href="members.html">Accelerator Control</a></div>
     <div id="left-menu">
-      <a href="asset.html">Asset</a>
-      <a href="bab.html" class="secret-menu">Bab</a>
       <a href="" class="secret-menu">Logbook</a>
       <a href="" class="secret-menu">Finder</a>
       <a href="" class="secret-menu">Naming</a>
+      <a href="bab.html">Bab</a>
+      <a href="asset.html">Asset</a>
+
     </div>
     <div id="right-menu">
       <a href="monitoring.html">Monitoring</a>
@@ -41,17 +42,16 @@
     </div>
   </div>
 
-  <div style="height:50px"></div>
+  <div style="height:20px"></div>
 
   <div style="width: 1920px; height: 50px; margin: auto; text-align: center; font-size: 44px; color: white">
-    Accelerator Control Team
+    Control Team
   </div>
 
-  <div id="body"
-    style="margin:auto; width:1920px; height:900px; display: flex; justify-content: center; align-items: center;">
+  <div id="body" style="margin:auto; width:1920px; height:700px; display: flex;">
 
     <!-- Lee SangIl -->
-    <div class="card">
+    <div class="card" style="animation-delay: 0.0s;">
       <div class="topleft"></div>
       <img class="avatar" src="images/profile-image.svg">
       <div class="name">Lee, SangIl</div>
@@ -86,7 +86,7 @@
     </div>
 
     <!-- Choi YongJun -->
-    <div class="card">
+    <div class="card" style="animation-delay: 0.1s;">
       <div class="topleft"></div>
       <img class="avatar" src="images/profile-image.svg">
       <div class="name">Choi, YongJun</div>
@@ -121,7 +121,7 @@
     </div>
 
     <!-- Kim YongHak -->
-    <div class="card">
+    <div class="card" style="animation-delay: 0.2s;">
       <div class="topleft"></div>
       <img class="avatar" src="images/profile-image.svg">
       <div class="name">Kim, YongHak</div>
@@ -156,7 +156,7 @@
     </div>
 
     <!-- Son Changwook -->
-    <div class="card">
+    <div class="card" style="animation-delay: 0.3s;">
       <div class="topleft"></div>
       <img class="avatar" src="images/scwook.png">
       <div class="name">Son, Changwook</div>
@@ -191,11 +191,11 @@
     </div>
 
     <!-- Park MiJeong -->
-    <div class="card">
+    <div class="card" style="animation-delay: 0.4s;">
       <div class="topleft"></div>
       <img class="avatar" src="images/profile-image.svg">
       <div class="name">Park, MiJeong</div>
-      <div class="title">Researcher</div>
+      <div class="title">Research Fellow</div>
       <div class="task">Operator Interface</div>
       <div class="task">Control System Infrastructure</div>
       <div class="location">
