--- a/raon-control/schedule.html
+++ b/raon-control/schedule.html
@@ -27,11 +27,12 @@
         <div id="raon-box"><a href="main.html"><img src="images/raon-white.svg"></img></a></div>
         <div id="accelerator-control"><a href="members.html">Accelerator Control</a></div>
         <div id="left-menu">
-            <a href="asset.html">Asset</a>
-            <a href="bab.html" class="secret-menu">Bab</a>
             <a href="" class="secret-menu">Logbook</a>
             <a href="" class="secret-menu">Finder</a>
             <a href="" class="secret-menu">Naming</a>
+            <a href="bab.html">Bab</a>
+            <a href="asset.html">Asset</a>
+
         </div>
         <div id="right-menu">
             <a href="monitoring.html">Monitoring</a>
