--- a/raon-control/archive.html
+++ b/raon-control/archive.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script src="script/jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="common.css">
 <link rel="stylesheet" type="text/css" href="archive.css">
 
 <body>
@@ -25,7 +26,14 @@
 		</svg>
         <div id="raon-box"><a href="main.html"><img src="images/raon-white.svg"></img></a></div>
 		<div id="accelerator-control"><a href="members.html">Accelerator Control</a></div>
-		<div id="menu">
+		<div id="left-menu">
+			<a href="" class="secret-menu">Logbook</a>
+			<a href="" class="secret-menu">Finder</a>
+			<a href="" class="secret-menu">Naming</a>
+			<a href="bab.html">Bab</a>
+			<a href="asset.html">Asset</a>
+		</div>
+		<div id="right-menu">
 			<a href="monitoring.html">Monitoring</a>
 			<a href="schedule.html">Schedule</a>
 			<a href="archive.html">Archive</a>
