--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -29,11 +29,12 @@
         <div id="raon-box"><a href="main.html"><img src="images/raon-white.svg"></a></div>
         <div id="accelerator-control"><a href="members.html">Accelerator Control</a></div>
         <div id="left-menu">
-            <a href="asset.html">Asset</a>
-            <a href="bab.html" class="secret-menu">Bab</a>
             <a href="" class="secret-menu">Logbook</a>
             <a href="" class="secret-menu">Finder</a>
             <a href="" class="secret-menu">Naming</a>
+            <a href="bab.html">Bab</a>
+            <a href="asset.html">Asset</a>
+
         </div>
         <div id="right-menu">
             <a href="monitoring.html">Monitoring</a>
@@ -384,8 +385,12 @@
                         <polyline class="boxEdgeStyle" points="611.5 161.5 621.5 161.5 621.5 151.5" />
                         <polyline class="boxEdgeStyle" points="0.5 151.5 0.5 161.5 10.5 161.5" />
                     </svg>
+
                     <div style="width: 100%; height: 100%; position: relative;">
-                        <div class="doughnutChartText">80%</div>
+                        <div class="data-name" style="position: relative; top: 5px; width: 100%; text-align: center;">
+                            Disk
+                        </div>
+                        <div class="doughnutChartText">14GB</div>
                         <div class="doughnut-contain" style="left:50px; top:10px">
                             <svg style="fill:none">
                                 <circle class="doughnutBackground" cx="50" cy="50" r="50" />
@@ -393,14 +398,13 @@
                                     style="--chartValue:200" />
                             </svg>
                         </div>
-                        <div class="data-name"
-                            style="position: relative; top: 10px; width: 100%; height: 30px; text-align: center;">
-                            Storage1
-                        </div>
                     </div>
 
                     <div style="width: 100%; height: 100%; position: relative;">
-                        <div class="doughnutChartText">10%</div>
+                        <div class="data-name" style="position: relative; top: 5px; width: 100%; text-align: center;">
+                            Archive
+                        </div>
+                        <div class="doughnutChartText">219</div>
                         <div class="doughnut-contain" style="left:50px; top:10px">
                             <svg style="fill:none">
                                 <circle class="doughnutBackground" cx="50" cy="50" r="50" />
@@ -408,24 +412,19 @@
                                     style="--chartValue:400" />
                             </svg>
                         </div>
-                        <div class="data-name"
-                            style="position: relative; top: 10px; width: 100%; height: 30px; text-align: center;">
-                            Storage1
-                        </div>
                     </div>
 
                     <div style="width: 100%; height: 100%; position: relative;">
-                        <div class="doughnutChartText">60%</div>
+                        <div class="data-name" style="position: relative; top: 5px; width: 100%; text-align: center;">
+                            Record
+                        </div>
+                        <div class="doughnutChartText">300</div>
                         <div class="doughnut-contain" style="left:50px; top:10px">
                             <svg style="fill:none">
                                 <circle class="doughnutBackground" cx="50" cy="50" r="50" />
                                 <circle class="doughnutForeground" cx="50" cy="50" r="50" stroke="#e60000"
                                     style="--chartValue:250" />
                             </svg>
-                        </div>
-                        <div class="data-name"
-                            style="position: relative; top: 10px; width: 100%; height: 30px; text-align: center;">
-                            Storage1
                         </div>
                     </div>
 
